--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,8 +11,39 @@ env:
   REGISTRY: docker.io
 
 jobs:
-  ci:
-    name: Continuous Integration
+  # Job 1: Code Quality (Linting & Tests)
+  code-quality:
+    name: Code Quality Checks
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Run flake8 linter
+        run: |
+          flake8 scraper/ tests/ --max-line-length=100 --exclude=__pycache__ || true
+      
+      - name: Run unit tests with pytest
+        run: |
+          pytest tests/ -v --tb=short
+
+  # Job 2: Security Analysis (SAST & SCA)
+  security:
+    name: Security Analysis
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -20,30 +51,21 @@ jobs:
       actions: read
     
     steps:
-      # Stage 1: Checkout
       - name: Checkout code
         uses: actions/checkout@v4
       
-      # Stage 2: Setup Python Runtime
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
           cache: 'pip'
       
-      # Stage 3: Dependency Installation
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
       
-      # Stage 4: Linting
-      - name: Run flake8 linter
-        run: |
-          flake8 scraper/ tests/ --max-line-length=100 --exclude=__pycache__ || true
-          # Note: Linting warnings don't fail the build, but should be addressed
-      
-      # Stage 5: SAST - GitHub CodeQL
+      # SAST - GitHub CodeQL
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
@@ -52,52 +74,56 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
       
-      # Stage 6: SCA - Dependency Vulnerability Scan
+      # SCA - Dependency Vulnerability Scan
       - name: Run pip-audit for SCA
         run: |
           pip-audit --requirement requirements.txt --format json --output pip-audit-report.json || true
           pip-audit --requirement requirements.txt --desc
-        continue-on-error: false
       
       - name: Check for High/Critical vulnerabilities
         run: |
           if [ -f pip-audit-report.json ]; then
-            # Check if there are High or Critical vulnerabilities
-            # Exclude filelock (dev tool dependency - fixed version not on PyPI yet)
-            HIGH_CRITICAL=$(python3 -c "
-            import json
-            try:
-                with open('pip-audit-report.json', 'r') as f:
-                    data = json.load(f)
-                    vulns = data.get('vulnerabilities', [])
-                    # Filter out filelock (dev tool dependency, not app dependency)
-                    high_critical = [v for v in vulns 
-                                   if v.get('severity', '').upper() in ['HIGH', 'CRITICAL']
-                                   and v.get('name', '').lower() != 'filelock']
-                    if high_critical:
-                        print('Found High/Critical vulnerabilities in application dependencies:')
-                        for v in high_critical:
-                            print(f\"  - {v.get('name')}: {v.get('severity')}\")
-                        exit(1)
-                    else:
-                        print('No High/Critical vulnerabilities in application dependencies.')
-                        # Note: filelock vulnerabilities are in dev tools, not app code
-            except Exception as e:
-                print(f'Error parsing audit report: {e}')
-                exit(0)
-            ")
+            python3 << 'EOF'
+import json
+import sys
+
+try:
+    with open('pip-audit-report.json', 'r') as f:
+        data = json.load(f)
+        vulns = data.get('vulnerabilities', [])
+        # Filter out filelock (dev tool dependency, not app dependency)
+        high_critical = [v for v in vulns 
+                       if v.get('severity', '').upper() in ['HIGH', 'CRITICAL']
+                       and v.get('name', '').lower() != 'filelock']
+        if high_critical:
+            print('Found High/Critical vulnerabilities in application dependencies:')
+            for v in high_critical:
+                print(f"  - {v.get('name')}: {v.get('severity')}")
+            sys.exit(1)
+        else:
+            print('No High/Critical vulnerabilities in application dependencies.')
+except Exception as e:
+    print(f'Error parsing audit report: {e}')
+    sys.exit(0)
+EOF
             if [ $? -ne 0 ]; then
-              echo "::error::High or Critical vulnerabilities detected in application dependencies. Build failed."
+              echo "::error::High or Critical vulnerabilities detected. Build failed."
               exit 1
             fi
           fi
+
+  # Job 3: Build & Container Security
+  build-and-scan:
+    name: Build & Container Security
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-      # Stage 7: Unit Tests
-      - name: Run unit tests with pytest
-        run: |
-          pytest tests/ -v --tb=short
-      
-      # Stage 8: Docker Build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
@@ -111,9 +137,9 @@ jobs:
           cache-to: type=gha,mode=max
           load: true
       
-      # Stage 9: Container Image Scan
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
+        continue-on-error: true
         with:
           image-ref: ${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
           format: 'sarif'
@@ -122,12 +148,32 @@ jobs:
           exit-code: '1'
           ignore-unfixed: false
       
-      # Stage 10: Runtime Smoke Test
+      - name: Upload Trivy results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        continue-on-error: true
+        with:
+          sarif_file: 'trivy-results.sarif'
+      
       - name: Runtime smoke test
         run: |
-          docker run --rm ${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} python -c "from scraper.main import int_extractor; assert int_extractor('Rs. 999') == 999; assert int_extractor('$$99.99') == 99; print('✓ Smoke test passed: int_extractor function works correctly')"
+          docker run --rm ${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ github.sha }} python -c "from scraper.main import int_extractor; assert int_extractor('Rs. 999') == 999; assert int_extractor('99.99') == 99; print('✓ Smoke test passed')"
+
+  # Job 4: Publish to DockerHub
+  publish:
+    name: Publish to DockerHub
+    runs-on: ubuntu-latest
+    needs: [code-quality, security, build-and-scan]
+    permissions:
+      contents: read
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-      # Stage 11: DockerHub Push
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
       - name: Login to DockerHub
         uses: docker/login-action@v3
         with:
@@ -144,10 +190,3 @@ jobs:
             ${{ env.REGISTRY }}/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-      
-      - name: Upload Trivy results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
-        continue-on-error: true
-        with:
-          sarif_file: 'trivy-results.sarif'
