cd pipeline init

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -37,9 +37,11 @@ jobs:
       - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
-          echo "${{ secrets.KUBE_CONFIG }}" > $HOME/.kube/config
+          # Decode base64 kubeconfig and write to file
+          echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
           kubectl config view
+          kubectl cluster-info
       
       # Stage 4: Deploy manifests
       - name: Deploy to Kubernetes
