--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,19 +27,36 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
-      # Stage 2: Setup kubectl
+      # Stage 2: Setup gcloud CLI (required for GKE auth)
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          export_default_credentials: true
+      
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          gcloud components install gke-gcloud-auth-plugin --quiet
+          # Ensure plugin is in PATH
+          export PATH="$PATH:$(gcloud --format='value(installation.sdk_root)')/bin"
+          echo "$(gcloud --format='value(installation.sdk_root)')/bin" >> $GITHUB_PATH
+      
+      # Stage 3: Setup kubectl
       - name: Set up kubectl
         uses: azure/setup-kubectl@v3
         with:
           version: 'latest'
       
-      # Stage 3: Configure kubeconfig
+      # Stage 4: Configure kubeconfig
       - name: Configure kubeconfig
         run: |
           mkdir -p $HOME/.kube
           # Decode base64 kubeconfig and write to file
           echo "${{ secrets.KUBE_CONFIG }}" | base64 -d > $HOME/.kube/config
           chmod 600 $HOME/.kube/config
+          # Verify auth plugin is available
+          which gke-gcloud-auth-plugin || echo "Warning: gke-gcloud-auth-plugin not found in PATH"
           kubectl config view
           kubectl cluster-info
       
