simplify gcp auth in cd pipeline

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,12 +35,10 @@ jobs:
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
       
-      - name: Authenticate gcloud
+      - name: Verify gcloud authentication
         run: |
-          echo "${{ secrets.GCP_SA_KEY }}" > $HOME/gcp-key.json
-          gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
           gcloud auth list
+          gcloud config get-value project
       
       - name: Install gke-gcloud-auth-plugin
         run: |
