--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,12 +18,7 @@ spec:
       - name: scraper
         image: ${IMAGE_TAG}
         imagePullPolicy: Always
-        resources:
-          requests:
-            memory: "32Mi"
-            cpu: "50m"
-          limits:
-            memory: "64Mi"
-            cpu: "100m"
+        # No resource requests - let Kubernetes use defaults (for e2-micro nodes with limited memory)
+        # This allows the pod to be scheduled even with minimal available memory
         command: ["sh", "-c", "python -c 'from scraper.main import int_extractor; print(\"Web scraper container is running\")' && sleep infinity"]
       restartPolicy: Always
